# MR_and_N

./: CMakeLists.txt  README.md  package.xml
Short Project/: Localization_Model.slx  Plotting_LaserRF_RobotWRF_ex1.m  Plotting_LaserRF_RobotWRF_ex2.m  Plotting_LaserRF_RobotWRF_ex3.m  Plotting_LaserRF_RobotWRF_ex4.m
launch/: launchmrn.launch  move_base.launch  nav.launch  sim.launch  slam.launch
launch/includes/: amcl.launch.xml  fake_localization.launch.xml  gmapping.launch.xml  map_server.launch.xml  move_base.launch.xml  move_base_local.launch.xml
launch/robot/: kobuki.launch  roomba.launch
maps/: scene1.pgm  scene1.yaml
param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params_nomap.yaml  local_costmap_params.yaml  move_base_params.yaml
scripts/: install_ros.sh  kobuki_set.sh  kobuki_unset.sh  upc_mrn_setup.sh
scripts/kobuki/: 1_ros.sh  2_workspace.sh  3_setup_kobuki.sh  4_extra_setup_roomba.sh
src/: exploration_biggest_frontier.cpp  exploration_closest_frontier.cpp  exploration_project.cpp  exploration_project2.cpp  exploration_random.cpp
